tests/errors/surf_type_14.ki
# type/operator: '**' is undefined for Strings
discard "a" ** "b"
